compiler/testData/diagnostics/tests/inference/recursiveLocalFuns/recursiveLambda.kt
fun foo() {
    fun bar() = {
        <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM_ERROR!><!DEBUG_INFO_MISSING_UNRESOLVED!>bar<!>()<!>
    }
}